change float to card

--- a/settings.gradle
+++ b/settings.gradle
@@ -33,7 +33,8 @@ dependencyResolutionManagement {
                 // This should always be `mapbox` (not your username).
                 username = "mapbox"
                 // Use the secret token you stored in gradle.properties as the password
-                password = "sk.eyJ1Ijoic29kaXFqb24iLCJhIjoiY2xleTR0N3dxMDFrODQwbDNpMjg1cm9mdSJ9.bucIZA5CDpDbJbGj9ZI2Jg"
+                //password = "sk.eyJ1Ijoic29kaXFqb24iLCJhIjoiY2xleTR0N3dxMDFrODQwbDNpMjg1cm9mdSJ9.bucIZA5CDpDbJbGj9ZI2Jg"
+                password = "pk.eyJ1Ijoic29kaXFqb24iLCJhIjoiY2xmNW9nd3U3MG5qdDQwcjBncW52OXg4YiJ9.Uzto2P56UsJhjBsx9KB57g"
             }
         }
     }
