--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -42,7 +43,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.android.gms:play-services-location:21.0.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -79,6 +79,9 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:2.6.0-alpha07"
     implementation "androidx.navigation:navigation-ui-ktx:2.6.0-alpha07"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    //foreground
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 
 
 }
